# eddsa-circuits

./: Cargo.toml  README.md
plonk-develop/: Cargo.toml
plonk-develop/src/: lib.rs  mimc-inside.rs  mimc.rs  nonnative_field.rs  transcript.rs  utils.rs
plonk-develop/src/composer/: arithmetic.rs  lookup.rs  mod.rs  permutation.rs  range.rs
plonk-develop/src/prover/: mod.rs  prover_key.rs
plonk-develop/src/prover/widget/: arithmetic.rs  lookup.rs
src/: eddsa_mimc.rs  main.rs  mimchash.rs  utils.rs
src/lib/: babyjubjub.rs  comparators.rs  eddsa.rs  mimc.rs  mod.rs  mux.rs  num_to_bits.rs
