[package]
name = "eddsa-circuits"
description = "generate eddsa signature and verify in circuits"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["ark-ff/std", "ark-std/std", "ark-poly/std", "ark-poly-commit/std"]
parallel = ["std", "rayon", "ark-ff/parallel", "ark-std/parallel", "ark-poly/parallel", "ark-poly-commit/parallel"]

[dependencies]
rayon = { version = "1", optional = true }
rand_core = { version = "0.5", optional = false }

ark-ff = { version = "0.3", default-features = false }
ark-std = { version = "0.3", default-features = false }
ark-poly = { version = "0.3", default-features = false }
ark-poly-commit = { version = "0.3", default-features = false }

num-bigint = { version = "0.4", features = ["rand"] }

ark-bn254 = {version = "0.3.0", default-features = false, features = ["curve"]}

plonk = {path = "./plonk-develop"}

serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }

#babyjubjub-rs = "0.0.8"

ff = {package="ff_ce" , version="0.11", features = ["derive"]}

rand = "0.8"
num = "0.2.0"
num-traits = "0.2.8"
generic-array = "0.13.2"
arrayref = "0.3.5"
lazy_static = "1.4.0"
blake-hash = "0.4.1"
rustc-hex = "1.0.0"
poseidon-rs = "0.0.8"

[dev-dependencies]

